# smirgen

./: .gitignore  CHANGELOG.md  CODE_REVIEW.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  smir_loop.cpp
examples/: example.py
original_matlab/: LICENSE  rir_generator.cpp  smir_generator.m  smir_generator_loop.cpp
smirgen/: __init__.py  analysis.py  coords.py  generator.py  hybrid.py  plotting.py  torch_gen.py
tests/: test_smir.py
