[build-system]
requires = ["setuptools>=61.0", "pybind11>=2.10", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smirgen"
version = "2.5.0"
description = "Spherical Microphone array Impulse Response generator (Python port of SMIRgen, with a native pybind11 core)"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "smirgen contributors", email = "jeongis0203@gmail.com" }]
keywords = [
    "acoustics", "room impulse response", "RIR", "image method",
    "spherical microphone array", "ambisonics", "spherical harmonics",
]
dependencies = ["numpy", "scipy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]

[project.optional-dependencies]
plot = ["matplotlib"]
test = ["pytest", "matplotlib"]

# After creating the GitHub repo, fill in the real URL:
# [project.urls]
# Homepage = "https://github.com/<you>/smirgen"

[tool.setuptools]
packages = ["smirgen"]
